--- a/.github/workflows/汉服荟自动签到.yml
+++ b/.github/workflows/汉服荟自动签到.yml
@@ -1,20 +1,16 @@
-name:汉服荟自动签到
-
+name: 汉服荟自动签到
 on:
-  push:
-
+  schedule:
+    - cron: '0 0 * * *'  # 每天UTC时间的0点触发，您可以根据需求调整时间
 
 jobs:
   build-linux:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
-
       - name: Set up Python 3.10
         uses: actions/setup-python@v3
         with:
           python-version: '3.10'
-
       - name: Run Python script
         run: python HanFuHui.py
