--- a/.github/workflows/汉服荟自动签到.yml
+++ b/.github/workflows/汉服荟自动签到.yml
@@ -2,7 +2,7 @@ name: 汉服荟自动签到
 on:
   push:
   schedule:
-    - cron: '0 0 * * *'  # 每天UTC时间的0点触发，您可以根据需求调整时间
+    - cron: '0 0 * * *'  # 每天UTC时间的0点触发
 
 jobs:
   build-linux:
@@ -13,5 +13,7 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: '3.10'
+      - name: Install dependencies
+        run: pip install -r requirements.txt
       - name: Run Python script
         run: python HanFuHui.py
