--- a/.github/workflows/汉服荟自动签到.yml
+++ b/.github/workflows/汉服荟自动签到.yml
@@ -3,7 +3,7 @@ on:
   push:
   schedule:
     - cron: '0 0 * * *'  # 每天UTC时间的0点触发
-
+      timeZone: 'Asia/Shanghai'  # 设置时区为上海时区
 jobs:
   build-linux:
     runs-on: ubuntu-latest
